Fix spacing issue

--- a/assets/css/mixins/overrides/variables.scss
+++ b/assets/css/mixins/overrides/variables.scss
@@ -36,10 +36,12 @@ $body-color: #A1B0B8;
 
 $transition-collapse: 0;
 
-$spacers: (
-  6: ($spacer * 4),
-  7: ($spacer * 4.5),
-  8: ($spacer * 5),
-  9: ($spacer * 5.5),
-  10: ($spacer * 6)
+$spacers: map-merge(
+  $spacers, (
+    6: ($spacer * 4),
+    7: ($spacer * 4.5),
+    8: ($spacer * 5),
+    9: ($spacer * 5.5),
+    10: ($spacer * 6)
+  )
 );
